--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "chrome-aws-lambda": "7.0.0",
     "marked": "4.0.10",
+    "node-fetch": "3.2.10",
     "puppeteer-core": "13.1.2",
     "twemoji": "13.0.1"
   },
